versioned_docs/version-2.9/reference/subsystems/scalafmt.mdx
---
title: scalafmt
description: |
  scalafmt (https://scalameta.org/scalafmt/)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

scalafmt (https://scalameta.org/scalafmt/)

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[scalafmt]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]scalafmt-skip`}
  env_repr='PANTS_SCALAFMT_SKIP'
  toml_repr={`[scalafmt]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use `scalafmt` when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--scalafmt-version=<str>`}
  env_repr='PANTS_SCALAFMT_VERSION'
  toml_repr={`[scalafmt]
version = <str>`}
  default_repr={`3.2.1`}
>

Version string for the tool. This is available for substitution in the `[scalafmt].artifacts` option by including the string `{version}`.

</Option>

### `artifacts`

<Option
  cli_repr={`--scalafmt-artifacts="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALAFMT_ARTIFACTS'
  toml_repr={`[scalafmt]
artifacts = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "org.scalameta:scalafmt-cli_2.13:{version}"\n]`}
>

Artifact requirements for this tool using specified as either the address of a `jvm_artifact` target or, alternatively, as a colon-separated Maven coordinates (e.g., group:name:version). For Maven coordinates, the string `{version}` version will be substituted with the value of the `[scalafmt].version` option.

</Option>

### `lockfile`

<Option
  cli_repr={`--scalafmt-lockfile=<str>`}
  env_repr='PANTS_SCALAFMT_LOCKFILE'
  toml_repr={`[scalafmt]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.9.2/src/python/pants/backend/scala/lint/scalafmt/scalafmt.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants jvm-generate-lockfiles --resolve=scalafmt`.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
